--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
     <title>绘星云计算 - 新时代云计算服务商</title>
+
     <meta name="keywords" content="绘星云计算" />
     <meta name="description" content="绘星云计算, Minecraft, 我的世界, 服务器, 云计算" />
     <meta http-equiv="content-language" content="zh-CN">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1" />
+
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/animate.css" />
@@ -24,7 +27,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="" class="navbar-brand">绘星云计算</a>
+
+                <a href="" class="navbar-logo">绘星云计算</a>
             </div>
             <!-- Logo -->
 
@@ -45,10 +49,18 @@
     <!-- Banner -->
     <section id="home">
         <div class="jumbotron banner wow fadeInRight">
+            <div class="star star1"></div>
+            <div class="star star2"></div>
+            <div class="star star3"></div>
+            <div class="star star4"></div>
+            <div class="star star5"></div>
+            <div class="star star6"></div>
+            <div class="star star7"></div>
+            <div class="star star8"></div>
+
             <div class="container">
                 <h1>绘星云计算</h1>
-                <p>这里是一段介绍...</p>
-                <p><a class="btn btn-success btn-lg" href="https://www.bing.com/" role="button">立即购买</a></p>
+                <a class="button" href="https://www.bing.com/"><span>立即购买</span></a>
             </div>
         </div>
     </section>
@@ -174,7 +186,7 @@
                                 QQ:
                             </p>
                             <p>
-                                电话: 
+                                电话:
                             </p>
                             <p>
                                 邮箱: <a href="mailto:support@huixingidc.cn" target="_blank">support@huixingidc.cn</a>
@@ -205,7 +217,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/wow.min.js"></script>
-    
+
 </body>
 
 </html>
